Fix overflow

--- a/Face/face.css
+++ b/Face/face.css
@@ -1,3 +1,7 @@
+html {
+    overflow: hidden;
+}
+
 img,
 canvas {
     position: absolute;
